--- a/integração.html
+++ b/integração.html
@@ -17,10 +17,10 @@
             <div class="menu-desktop">
                 <nav>
                     <ul>
-                        <li><button><a href="index.php">Quem Somos</a></button></li>
-                        <li><button><a href="integração.php">Sistema</a></button></li>
-                        <li><button><a href="integração.php">Integração</a></button></li>
-                        <li><button><a href="Contato.php">Contato</a></button></li>
+                        <li><button><a href="index.html">Quem Somos</a></button></li>
+                        <li><button><a href="integração.html">Sistema</a></button></li>
+                        <li><button><a href="integração.html">Integração</a></button></li>
+                        <li><button><a href="Contato.html">Contato</a></button></li>
                     </ul>
                 </nav>
             </div><!--menu desktop-->
@@ -31,10 +31,10 @@
 
                 <nav>
                         <ul>
-                            <li><button><a href="index.php">Quem Somos</a></button></li>
-                            <li><button><a href="integração.php">Sistema</a></button></li>
-                            <li><button><a href="integração.php">Integração</a></button></li>
-                            <li><button><a href="index.php">Contato</a></button></li>
+                            <li><button><a href="index.html">Quem Somos</a></button></li>
+                            <li><button><a href="integração.html">Sistema</a></button></li>
+                            <li><button><a href="integração.html">Integração</a></button></li>
+                            <li><button><a href="index.html">Contato</a></button></li>
                         </ul>
                 </nav>    
             </div>
