Arrumando link's menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <li><button><a href="index.html">Quem Somos</a></button></li>
                             <li><button><a href="integração.html">Sistema</a></button></li>
                             <li><button><a href="integração.html">Integração</a></button></li>
-                            <li><button><a href="index.html">Contato</a></button></li>
+                            <li><button><a href="Contato.html">Contato</a></button></li>
                         </ul>
                 </nav>    
             </div>
