--- a/integração.html
+++ b/integração.html
@@ -11,16 +11,16 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="./Images/COOPIG1.png" alt="">
+                <img src="./Images/LOGO_COOPIG_V002.svg" alt="">
             </div><!-- logo -->
 
             <div class="menu-desktop">
                 <nav>
                     <ul>
-                        <li><button><a href="index.html">Quem Somos</a></button></li>
-                        <li><button><a href="integração.html">Sistema</a></button></li>
-                        <li><button><a href="integração.html">Integração</a></button></li>
-                        <li><button><a href="Contato.html">Contato</a></button></li>
+                        <li><a href="home.html">Quem Somos</a></li>
+                        <li><a href="sistema.html">Sistema</a></li>
+                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="Contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div><!--menu desktop-->
@@ -31,10 +31,10 @@
 
                 <nav>
                         <ul>
-                            <li><button><a href="index.html">Quem Somos</a></button></li>
-                            <li><button><a href="integração.html">Sistema</a></button></li>
-                            <li><button><a href="integração.html">Integração</a></button></li>
-                            <li><button><a href="Contato.html">Contato</a></button></li>
+                            <li><a href="home.html">Quem Somos</a></li>
+                            <li><a href="sistema.html">Sistema</a></li>
+                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="Contato.html">Contato</a></li>
                         </ul>
                 </nav>    
             </div>
@@ -48,11 +48,11 @@
 
             <div class="container banner-container">
                 <div class="banner-text">
-                    <h2>Inovação e eficiência na 
-                        gestão de granjas</h2>
-                    <p>Gerenciando sua Granja com Eficiência,<br>
-                        trnasformando seus desafios em oportunidades</p>
-                    <button><a href="">Contrate Agora!</a></button>
+                    <h2>Conectando produtores,
+                        técnicos e fábricas.</h2>
+                    <p>Unindo Produtores, Técnicos e Fábricas <br>
+                        para uma Granja de Sucesso.</p>
+                    
                 </div>
             </div>
         </div>
@@ -190,14 +190,22 @@
 
         </div>
 
+        <div class="container">
+            <div class="termos">
+                <p>© Todos os direitos reservados</p>
+                <a href="">Termos e Condições de Uso</a>
+                <a href="">Política de Privacidade</a>
+            </div>
+        </div>
+
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-
-<script>
-    $('.menu-mobile h3').click(function(){
-        $('.menu-mobile ul').slideToggle()
-    })
-</script>
+    
+    <script>
+        $('.menu-mobile h3').click(function(){
+            $('.menu-mobile ul').slideToggle()
+        })
+    </script>
 </body>
 </html>
