--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="./Images/COOPIG1.png" alt="">
+                <img src="./Images/LOGO_COOPIG_V002.svg" alt="">
             </div><!-- logo -->
 
             <div class="menu-desktop">
                 <nav>
                     <ul>
-                        <li><button><a href="index.html">Quem Somos</a></button></li>
-                        <li><button><a href="integração.html">Sistema</a></button></li>
-                        <li><button><a href="integração.html">Integração</a></button></li>
-                        <li><button><a href="Contato.html">Contato</a></button></li>
+                        <li><a href="home.html">Quem Somos</a></li>
+                        <li><a href="sistema.html">Sistema</a></li>
+                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="Contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div><!--menu desktop-->
@@ -31,10 +31,10 @@
 
                 <nav>
                         <ul>
-                            <li><button><a href="index.html">Quem Somos</a></button></li>
-                            <li><button><a href="integração.html">Sistema</a></button></li>
-                            <li><button><a href="integração.html">Integração</a></button></li>
-                            <li><button><a href="Contato.html">Contato</a></button></li>
+                            <li><a href="home.html">Quem Somos</a></li>
+                            <li><a href="sistema.html">Sistema</a></li>
+                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="Contato.html">Contato</a></li>
                         </ul>
                 </nav>    
             </div>
@@ -74,6 +74,10 @@
         <div class="initialText">
             <h3>Nossa Solução</h3>
             <p>O Coopig nasceu no oeste de Santa Catarina, o polo de produção de proteína animal do país. Auxiliamos a aumentar a produtividade e eficiência na produção de suínos e aves através de soluções inovadoras de gestão e automação. Algumas características únicas da nossa solução estão listadas abaixo.</p>
+        </div>
+
+        <div class="imgFluxo">
+            <img src="./Images/Fluxo.png" alt="">
         </div>
     </div><!--container-->
 </section>
@@ -236,15 +240,26 @@
 
         </div>
 
+        <div class="container">
+            <div class="termos">
+                <p>© Todos os direitos reservados</p>
+                <a href="">Termos e Condições de Uso</a>
+                <a href="">Política de Privacidade</a>
+            </div>
+        </div>
+
     </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <script>
+        $('.menu-mobile h3').click(function(){
+            $('.menu-mobile ul').slideToggle()
+        })
+    </script>
 </body>
 
 
-<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
-<script>
-    $('.menu-mobile h3').click(function(){
-        $('.menu-mobile ul').slideToggle()
-    })
-</script>
 </html>
