--- a/integração.html
+++ b/integração.html
@@ -17,7 +17,7 @@
             <div class="menu-desktop">
                 <nav>
                     <ul>
-                        <li><a href="home.html">Quem Somos</a></li>
+                        <li><a href="index.html">Quem Somos</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
                         <li><a href="integração.html">Integração</a></li>
                         <li><a href="Contato.html">Contato</a></li>
@@ -31,7 +31,7 @@
 
                 <nav>
                         <ul>
-                            <li><a href="home.html">Quem Somos</a></li>
+                            <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
                             <li><a href="integração.html">Integração</a></li>
                             <li><a href="Contato.html">Contato</a></li>
