Adicionando envio de formularios

--- a/Contato.html
+++ b/Contato.html
@@ -49,20 +49,24 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3738.291956386134!2d-54.60767922591563!3d-20.453198454811634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9486e89cb96de669%3A0xd3360875674a5c2b!2sR.%20Brasil%2C%20205%20-%20Monte%20Castelo%2C%20Campo%20Grande%20-%20MS%2C%2079010-230!5e0!3m2!1spt-BR!2sbr!4v1721839824097!5m2!1spt-BR!2sbr" width="100%" height="200" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     
                     <div class="socialMedia">
-                        <a href=""><i class="fa-brands fa-instagram"></i> @sbrprime</a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i> SBR PRIME</a>
-                        <a href=""><i class="fa-brands fa-whatsapp"></i> (99) 9 9999-9999</a>
-                        <a href=""><i class="fa-brands fa-youtube"></i> SBR PRIME</a>
+                        <a href="https://www.instagram.com/sbrprime/?hl=pt-br"><i class="fa-brands fa-instagram"></i> @sbrprime</a>
+                        <a href="https://www.linkedin.com/company/sbr-prime/posts/?feedView=all"><i class="fa-brands fa-linkedin"></i> SBR PRIME</a>
+                        <a href="https://wa.me/556781775552?text="><i class="fa-brands fa-whatsapp"></i> (67) 9 8177-5552</a>
+                        <a href="https://www.youtube.com/@SBRPrimeRastreabilidade/videos"><i class="fa-brands fa-youtube"></i> SBR PRIME</a>
                     </div>
                 </div>
 
                 <div class="formpageContato">
-                    <form>
-                        <input type="text" placeholder="Nome Completo">
-                        <input type="email" placeholder="E-mail">
-                        <input type="tel" placeholder="Celular">
-                        <textarea placeholder="Mensagem"></textarea>
-                        <button>Enviar</button>
+                    <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
+                        <input type="text" name="name" placeholder="Nome Completo">
+                        <input type="email" name="email" placeholder="E-mail">
+                        <input type="tel" name="tel" placeholder="Celular">
+                        <textarea name="message" placeholder="Mensagem"></textarea>
+                        <button type="submit">Enviar</button>
+
+                        <input type="hidden" name="_subject" value="Novo Contato">
+                        <input type="text" name="_honey" style="display:none">
+                        <input type="hidden" name="_captcha" value="false">
                     </form>
                 </div>
             </div>
@@ -86,19 +90,22 @@
             </div>
 
             <div class="redes">
-                <img src="Contato.html" alt="">
-
-            </div>
+                <img src="./Images/logoSBRBranca.png" alt="">
+            </div>  
 
             <div class="formContato">
                 <h4>CONTATO</h4>
 
-                <form action="">
-                    <input type="text" placeholder="Nome Completo">
-                    <input type="email" placeholder="E-mail">
-                    <input type="tel" placeholder="Celular">
-                    <textarea id="" placeholder="Mensagem"></textarea>
-                    <button>Enviar</button>
+                <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
+                    <input type="text" name="name" placeholder="Nome Completo">
+                    <input type="email" name="email" placeholder="E-mail">
+                    <input type="tel" name="tel" placeholder="Celular">
+                    <textarea name="message" placeholder="Mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+
+                    <input type="hidden" name="_subject" value="Novo Contato">
+                    <input type="text" name="_honey" style="display:none">
+                    <input type="hidden" name="_captcha" value="false">
                 </form>
             </div>
 
