--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="banner">
         <div class="image-banner">
 
-            <img src="./Images/bannerInicial.jpg" alt="">
+            <img src="./Images/solucao/bannerInicial.jpg" alt="">
 
         <div class="container banner-container">
             <div class="banner-text">
@@ -52,7 +52,7 @@
                     gestão de granjas</h2>
                 <p>Gerenciando sua Granja com Eficiência,<br>
                     transformando seus desafios em oportunidades</p>
-                <button><a href="">Contrate Agora!</a></button>
+                <button><a href="https://wa.me/556781775552?text=">Contrate Agora!</a></button>
             </div>
         </div>
     </div>
@@ -88,49 +88,49 @@
 
             <div class="imgCaracteristicas">
                 <div class="wraperImg">
-                    <img src="./Images/pig.svg" alt="">
+                    <img src="./Images/solucao/pig.svg">
                     <p>Entrada e saída  de animais</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/temperatura.svg" alt="">
+                    <img src="./Images/solucao/temperatura.svg" alt="">
                     <p>Temperatura</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/mortalidade.svg" alt="">
+                    <img src="./Images/solucao/mortalidade.svg" alt="">
                     <p>Mortalidade e  doenças</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/consumo.svg" alt="">
+                    <img src="./Images/solucao/consumo.svg" alt="">
                     <p>Consumo de água e ração</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/Comunicacao.svg" alt="">
+                    <img src="./Images/solucao/Comunicacao.svg" alt="">
                     <p>Comunicação direta
                         <br>técnico e produtor</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/megafone.svg" alt="">
+                    <img src="./Images/solucao/megafone.svg" alt="">
                     <p>Noticações e Alertas</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/Agenda.svg" alt="">
+                    <img src="./Images/solucao/Agenda.svg" alt="">
                     <p>Agenda do técnico</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/target.svg" alt="">
+                    <img src="./Images/solucao/target.svg" alt="">
                     <p>Gestão de metas
                     <br>definidas pela cooperativa</p>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/grafico.svg" alt="">
+                    <img src="./Images/solucao/grafico.svg" alt="">
                     <p>Relatórios e gráficos</p>
                 </div>
             </div>
@@ -143,7 +143,7 @@
             <div class="box-objetivos">
                 
                     <div class="item-1-mosaico">
-                        <img src="./Images/image1Mos.jpg" alt="">
+                        <img src="./Images/solucao/image1Mos.jpg" alt="">
                     </div><!-- item-1-mosaico-->
 
                     <div class="item-2-mosaico">
@@ -158,7 +158,7 @@
             <div style="flex-direction: row-reverse;" class="box-objetivos">
 
                 <div class="item-1-mosaico">
-                    <img src="./Images/image2Mos.jpg" alt="">
+                    <img src="./Images/solucao/image2Mos.jpg" alt="">
                 </div><!-- item-1-mosaico-->
 
                 <div class="item-2-mosaico">
@@ -174,7 +174,7 @@
             <div class="box-objetivos">
                 
                 <div class="item-1-mosaico">
-                    <img src="./Images/image3Mos.jpg" alt="">
+                    <img src="./Images/solucao/image3Mos.png" alt="">
                 </div><!-- item-1-mosaico-->
 
                 <div class="item-2-mosaico">
@@ -189,7 +189,7 @@
         <div style="flex-direction: row-reverse;" class="box-objetivos">
 
             <div class="item-1-mosaico">
-                <img src="./Images/image4Mos.jpg" alt="">
+                <img src="./Images/solucao/imageMos4.png" alt="">
             </div><!-- item-1-mosaico-->
 
             <div class="item-2-mosaico">
@@ -222,19 +222,23 @@
             </div>
 
             <div class="redes">
-                <img src="./Images/logoSBR.png" alt="">
+                <img src="./Images/logoSBRBranca.png" alt="">
 
             </div>
 
             <div class="formContato">
                 <h4>CONTATO</h4>
 
-                <form action="">
-                    <input type="text" placeholder="Nome Completo">
-                    <input type="email" placeholder="E-mail">
-                    <input type="tel" placeholder="Celular">
-                    <textarea id="" placeholder="Mensagem"></textarea>
-                    <button>Enviar</button>
+                <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
+                    <input type="text" name="name" placeholder="Nome Completo">
+                    <input type="email" name="email" placeholder="E-mail">
+                    <input type="tel" name="tel" placeholder="Celular">
+                    <textarea name="message" placeholder="Mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+
+                    <input type="hidden" name="_subject" value="Novo Contato">
+                    <input type="text" name="_honey" style="display:none">
+                    <input type="hidden" name="_captcha" value="false">
                 </form>
             </div>
 
