--- a/integração.html
+++ b/integração.html
@@ -44,7 +44,7 @@
     <section id="banner">
             <div class="image-banner">
 
-                <img src="./Images/BannerSecondary-2.jpg" alt="">
+                <img src="./Images/Integracao/BannerSecondary-2.jpg" alt="">
 
             <div class="container banner-container">
                 <div class="banner-text">
@@ -73,7 +73,7 @@
             <div class="workers">
                 <div class="wraperWorkes">
                     <div class="function">
-                        <img src="./Images/farmer.svg" alt="">
+                        <img src="./Images/Integracao/farmer.svg" alt="">
                         <p class="title">PRODUTOR</p>
                     </div>
                     <div class="list">
@@ -88,7 +88,7 @@
 
                 <div class="wraperWorkes">
                     <div class="function">
-                        <img src="./Images/business-person_1332134 1.svg" alt="">
+                        <img src="./Images/Integracao/business-person_1332134 1.svg" alt="">
                         <p class="title">TÉCNICO</p>
                     </div>
                     <div class="list">
@@ -104,7 +104,7 @@
 
                 <div class="wraperWorkes">
                     <div class="function">
-                        <img src="./Images/factory_4091256 1.svg" alt="">
+                        <img src="./Images/Integracao/factory_4091256 1.svg " alt="">
                         <p class="title">AGROINDÚSTRIA</p>
                     </div>
                     <div class="list">
@@ -127,7 +127,7 @@
                 <div class="blogIntegracao">
                     <h3>Picking Up (software de controle de armazém (WMS))</h3>
 
-                    <img src="Images/pickingUpBlog teste.jpg" alt="">
+                    <img src="./Images/Integracao/pickingUpBlog teste.jpg" alt="">
 
                     <p>A integração contará com um software de controle de armazém (WMS), permitindo a organização e o rastreamento dos produtos armazenados através da tecnologia RFID e/ou QRCode. Esta solução moderna facilita a gestão dos estoques, garantindo maior controle e eficiência nos processos logísticos.</p>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="blogIntegracao">
                     <h3>Coopig</h3>
 
-                    <img src="Images/Coopig-2.jpg" alt="">
+                    <img src="./Images/Integracao/Coopig-2.jpg" alt="">
 
                     <p>O Coopig, originário do oeste de Santa Catarina, o polo de produção de proteína animal do país, tem como objetivo aumentar a produtividade e a eficiência na produção de suínos e aves. Através de soluções inovadoras de gestão e automação, o Coopig auxilia os produtores a alcançar melhores resultados, contribuindo para o avanço do setor.</p>
                 </div>
@@ -143,7 +143,7 @@
                 <div class="blogIntegracao">
                     <h3>Roboagro</h3>
                     <div class="videoCont">
-                        <video controls src="./videos/video1.mp4"></video>
+                        <video controls src="./videos/video2Editado.mp4 "></video>
                         <!-- <video controls src="./videos/video2.mp4"></video> -->
                     </div>
 
@@ -165,25 +165,32 @@
                 </div>
 
                 <div class="pickingUp">
-                    <img src="./Images/PickingUp.png" alt="">
-                    <p>Software de controle de armazém (WMS). Organize ou monitore seus produtos armazenados com o uso de tecnologia RFID e/ou QRCode</p>
+                    <p>CONHEÇA NOSSAS SOLUÇÕES</p>
+                    <div class="logosSolucoes">
+                        <a href=""><img src="./Images/PickingUp.png" alt=""></a>
+                        <a href=""><img src="./Images/PickingUp.png" alt=""></a>
+                    </div>
                 </div>
             </div>
 
             <div class="redes">
-                <img src="./Images/logoSBR.png" alt="">
+                <img src="./Images/logoSBRBranca.png" alt="">
 
             </div>
 
             <div class="formContato">
                 <h4>CONTATO</h4>
 
-                <form action="">
-                    <input type="text" placeholder="Nome Completo">
-                    <input type="email" placeholder="E-mail">
-                    <input type="tel" placeholder="Celular">
-                    <textarea id="" placeholder="Mensagem"></textarea>
-                    <button>Enviar</button>
+                <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
+                    <input type="text" name="name" placeholder="Nome Completo">
+                    <input type="email" name="email" placeholder="E-mail">
+                    <input type="tel" name="tel" placeholder="Celular">
+                    <textarea name="message" placeholder="Mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+
+                    <input type="hidden" name="_subject" value="Novo Contato">
+                    <input type="text" name="_honey" style="display:none">
+                    <input type="hidden" name="_captcha" value="false">
                 </form>
             </div>
 
