--- a/Contato.html
+++ b/Contato.html
@@ -58,10 +58,10 @@
 
                 <div class="formpageContato">
                     <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
-                        <input type="text" name="name" placeholder="Nome Completo">
-                        <input type="email" name="email" placeholder="E-mail">
-                        <input type="tel" name="tel" placeholder="Celular">
-                        <textarea name="message" placeholder="Mensagem"></textarea>
+                        <input type="text" name="name" placeholder="Nome Completo" required>
+                        <input type="email" name="email" placeholder="E-mail" required>
+                        <input type="tel" name="tel" placeholder="Celular" required>
+                        <textarea name="message" placeholder="Mensagem" required></textarea>
                         <button type="submit">Enviar</button>
 
                         <input type="hidden" name="_subject" value="Novo Contato">
@@ -84,8 +84,10 @@
                 </div>
 
                 <div class="pickingUp">
-                    <img src="./Images/PickingUp.png" alt="">
-                    <p>Software de controle de armazém (WMS). Organize ou monitore seus produtos armazenados com o uso de tecnologia RFID e/ou QRCode</p>
+                    <p>CONHEÇA NOSSAS SOLUÇÕES</p>
+                    <div class="logosSolucoes">
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
+                    </div>
                 </div>
             </div>
 
@@ -97,10 +99,10 @@
                 <h4>CONTATO</h4>
 
                 <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
-                    <input type="text" name="name" placeholder="Nome Completo">
-                    <input type="email" name="email" placeholder="E-mail">
-                    <input type="tel" name="tel" placeholder="Celular">
-                    <textarea name="message" placeholder="Mensagem"></textarea>
+                    <input type="text" name="name" placeholder="Nome Completo" required>
+                    <input type="email" name="email" placeholder="E-mail" required>
+                    <input type="tel" name="tel" placeholder="Celular" required>
+                    <textarea name="message" placeholder="Mensagem" required></textarea>
                     <button type="submit">Enviar</button>
 
                     <input type="hidden" name="_subject" value="Novo Contato">
