--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="O Coopig nasceu no oeste de Santa Catarina, o polo de produção de proteína animal do país. Auxiliamos a aumentar a produtividade e eficiência na produção de suínos e aves através de soluções inovadoras de gestão e automação.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Coopig</title>
@@ -77,7 +78,7 @@
         </div>
 
         <div class="imgFluxo">
-            <img src="./Images/Fluxo.png" alt="">
+            <img src="./Images/solucao/Fluxo.png" alt="">
         </div>
     </div><!--container-->
 </section>
@@ -216,8 +217,10 @@
                 </div>
 
                 <div class="pickingUp">
-                    <img src="./Images/PickingUp.png" alt="">
-                    <p>Software de controle de armazém (WMS). Organize ou monitore seus produtos armazenados com o uso de tecnologia RFID e/ou QRCode</p>
+                    <p>CONHEÇA NOSSAS SOLUÇÕES</p>
+                    <div class="logosSolucoes">
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
+                    </div>
                 </div>
             </div>
 
@@ -230,10 +233,10 @@
                 <h4>CONTATO</h4>
 
                 <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
-                    <input type="text" name="name" placeholder="Nome Completo">
-                    <input type="email" name="email" placeholder="E-mail">
-                    <input type="tel" name="tel" placeholder="Celular">
-                    <textarea name="message" placeholder="Mensagem"></textarea>
+                    <input type="text" name="name" placeholder="Nome Completo" required>
+                    <input type="email" name="email" placeholder="E-mail" required>
+                    <input type="tel" name="tel" placeholder="Celular" required>
+                    <textarea name="message" placeholder="Mensagem" required></textarea>
                     <button type="submit">Enviar</button>
 
                     <input type="hidden" name="_subject" value="Novo Contato">
