--- a/integração.html
+++ b/integração.html
@@ -167,8 +167,7 @@
                 <div class="pickingUp">
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
-                        <a href=""><img src="./Images/PickingUp.png" alt=""></a>
-                        <a href=""><img src="./Images/PickingUp.png" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -182,10 +181,10 @@
                 <h4>CONTATO</h4>
 
                 <form action="https://formsubmit.co/contato@sbrprime.com.br" method="POST" target="_blank">
-                    <input type="text" name="name" placeholder="Nome Completo">
-                    <input type="email" name="email" placeholder="E-mail">
-                    <input type="tel" name="tel" placeholder="Celular">
-                    <textarea name="message" placeholder="Mensagem"></textarea>
+                    <input type="text" name="name" placeholder="Nome Completo" required>
+                    <input type="email" name="email" placeholder="E-mail" required>
+                    <input type="tel" name="tel" placeholder="Celular" required>
+                    <textarea name="message" placeholder="Mensagem" required></textarea>
                     <button type="submit">Enviar</button>
 
                     <input type="hidden" name="_subject" value="Novo Contato">
