--- a/Contato.html
+++ b/Contato.html
@@ -46,7 +46,8 @@
         <div class="container">
             <div class="boxContato">
                 <div class="wraperMaps">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3738.291956386134!2d-54.60767922591563!3d-20.453198454811634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9486e89cb96de669%3A0xd3360875674a5c2b!2sR.%20Brasil%2C%20205%20-%20Monte%20Castelo%2C%20Campo%20Grande%20-%20MS%2C%2079010-230!5e0!3m2!1spt-BR!2sbr!4v1721839824097!5m2!1spt-BR!2sbr" width="100%" height="200" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    
+                    <img src="./Images/contato.jpg" alt="">
                     
                     <div class="socialMedia">
                         <a href="https://www.instagram.com/sbrprime/?hl=pt-br"><i class="fa-brands fa-instagram"></i> @sbrprime</a>
