--- a/index.html
+++ b/index.html
@@ -85,54 +85,92 @@
 
 <section id="caracteristicas">
     <h3>Características Gerais</h3>
+    <p style="margin: 40px 0; color: #ccc; font-size: 18px;">*Clique nos ícones*</p>
     <div class="container">
 
             <div class="imgCaracteristicas">
                 <div class="wraperImg">
-                    <img src="./Images/solucao/pig.svg">
+                    <img class="iconCaracteristicas" src="./Images/solucao/pig.svg">
                     <p>Entrada e saída  de animais</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Produtor realiza o cadastro de suínos, garantindo a rastreabilidade durante a cadeia produtiva incluindo transferências e encerramento do lote com relatório do desempenho e eficiência. </p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/temperatura.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/temperatura.svg" alt="">
                     <p>Temperatura</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Inclui registro de temperatura dentro do galpão, históricos gráficos de temperaturas durante a estadia do lote que auxilia no aumento da produtividade assegurando o bem-estar do suíno.</p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/mortalidade.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/mortalidade.svg" alt="">
                     <p>Mortalidade e  doenças</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Auxiliar os produtores a monitorar, registar detalhadamente as mortalidades, doenças e suas causas, além de gerar relatórios relacionado à saúde do suíno e implementação de medidas preventivas no setor. </p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/consumo.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/consumo.svg" alt="">
                     <p>Consumo de água e ração</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Monitoramento de consumo permitindo ajustes conforme a necessidade animal, análise por meio de gráficos que possibilitam análises para otimizar os custos com ração e água. </p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/Comunicacao.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/Comunicacao.svg" alt="">
                     <p>Comunicação direta
-                        <br>técnico e produtor</p>
+                    <br>técnico e produtor</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">sanar dúvidas rotineiras com o responsável técnico especializado na área, ter um registro de conversa e agendamento prévio das visitas técnicas. 
+                        </p>
+                    </div>"
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/megafone.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/megafone.svg" alt="">
                     <p>Noticações e Alertas</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Para garantir uma gestão eficiente os produtores recebem notificações para inclusão de dados da produção, metas alcançadas e alertas que permitem tomadas ações corretivas. </p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/Agenda.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/Agenda.svg" alt="">
                     <p>Agenda do técnico</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Fornece organização e otimização do profissional de campo com agendamento de tarefas e visitas, relatórios técnicos e acompanhamento de metas dos produtores. </p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/target.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/target.svg" alt="">
                     <p>Gestão de metas
                     <br>definidas pela cooperativa</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards">Análise do desempenho de cada produtor e da cooperativa por meio de gráficos, geração de relatórios da produção e cadastros gerais que garantem rapidez na inclusão de dados pelo produtor. </p>
+                    </div>
                 </div>
 
                 <div class="wraperImg">
-                    <img src="./Images/solucao/grafico.svg" alt="">
+                    <img class="iconCaracteristicas" src="./Images/solucao/grafico.svg" alt="">
                     <p>Relatórios e gráficos</p>
+
+                    <div class="cardsCaracterísticas">
+                        <p class="pCards"> Todos os perfis inclusos na plataforma têm acesso aos relatórios do andamento do lote, intervenções e metas atingidas. Proporcionando análise técnica para melhorias na produção e gráficos que ajudam a transformar dados brutos em informações úteis para uma gestão mais eficiente.</p>
+                    </div>
                 </div>
             </div>
     </div>
@@ -149,7 +187,7 @@
 
                     <div class="item-2-mosaico">
                         <p>
-                            O sistema Coopig torna as visitas técnicas mais eficientes ao proporcionar um planejamento detalhado, integração de tecnologias de gestão e comunicação, e capacitação contínua da equipe. 
+                            O sistema Coopig é projetado com foco em diferentes áreas-chave na suinocultura visando otimização da produção com aumenta da eficiência das operações da granja, maximização da produtividade e gestão de qualidade nos quesitos saúde e nutrição que influenciam para uma melhor conversão alimentar.  
                         </p>
 
                     </div> <!-- item-2-mosaico -->
@@ -164,7 +202,7 @@
 
                 <div class="item-2-mosaico">
                     <p>
-                        Permite um acompanhamento facilitado da produção na granja por parte da indústria, oferecendo ferramentas de monitoramento em tempo real e relatórios detalhados.
+                        Possibilita ajustes de ambiência, além de contribuir na melhoria do manejo nutricional e sanitário que impactam no desenvolvimento e crescimento da leitegada até a entrega do suíno adulto para agroindústria. Proporcionando maior controle das movimentações com a rastreabilidade de ativos dentro do ciclo de produção da suinocultura. 
                     </p>
 
                 </div> <!-- item-2-mosaico -->
@@ -180,7 +218,7 @@
 
                 <div class="item-2-mosaico">
                     <p>
-                        Automatiza e facilita os processos já existentes, integrando tecnologias avançadas que reduzem a necessidade de intervenções manuais. Isso aumenta a produtividade e minimiza erros operacionais. 
+                        Vem para facilitar a automação de processos e a integração de dados de diferentes áreas da granja que reduzem a necessidade de intervenções manuais e erros operacionais. Acompanha em tempo real o desempenho dos produtores e relatórios detalhados permitindo análise para tomada de decisões e formação de estratégia de manejo.  
                     </p>
 
                 </div> <!-- item-2-mosaico -->
@@ -195,7 +233,7 @@
 
             <div class="item-2-mosaico">
                 <p>
-                    Fazer uma análise e rastreabilidade de dados, aumentando a competitividade da indústria. Isso é alcançado através de ferramentas avançadas que garantem a precisão e a transparência das informações.
+                    A organização prévia da equipe técnica responsável, notificações e alertas resultam na precisão dos dados, na qualidade da produção e aumento dos índices zootécnicos. Consequentemente eleva a competitividade da indústria através de ferramentas avançadas que garantem o primor e a transparência das informações, além de oferecer registros detalhados para conformidade com regulamentações, auditorias e certificações.
                 </p>
 
             </div> <!-- item-2-mosaico -->
@@ -261,9 +299,15 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <script>
+        const elementIcon = document.querySelectorAll('.iconCaracteristicas');
+
         $('.menu-mobile h3').click(function(){
             $('.menu-mobile ul').slideToggle()
         })
+
+        $(elementIcon).click(function(){
+            $(this).siblings('.cardsCaracterísticas').slideToggle()
+        });
     </script>
 </body>
 
